<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#e6e5e5"
    android:orientation="vertical">

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/edtPass"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/password" />

        <Button
            android:id="@+id/bntLogin"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/buttonaa"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <TextView
            android:textSize="18dp"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="56dp" />

    </LinearLayout>


</LinearLayout>
